--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
 		"dotenv": "^8.1.0",
 		"firebase": "^7.0.0",
 		"jwt-decode": "^2.2.0",
+		"node-sass": "^4.13.0",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
 		"react-router": "^5.0.1",
@@ -17,21 +18,14 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"scss": "node-sass --watch src/scss -o src/css"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
 	},
 	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
+		"production": [ ">0.2%", "not dead", "not op_mini all" ],
+		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
 	}
 }
