--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,12 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@material-ui/core": "^4.5.1",
 		"axios": "^0.19.0",
 		"dotenv": "^8.1.0",
 		"firebase": "^7.0.0",
 		"jwt-decode": "^2.2.0",
+		"material-ui": "^0.20.2",
 		"node-sass": "^4.13.0",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
@@ -25,7 +27,15 @@
 		"extends": "react-app"
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	}
 }
