--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
 	"engines": {
 		"node": "12.9.1"
 	},
-	"description": "Take home assignment for Makersights Full Stack Engineer",
+	"description": "TeamUp team collaboration app",
 	"main": "index.js",
 	"scripts": {
 		"start": "node index.js",
